--- a/styleSec6.css
+++ b/styleSec6.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Kanit";
+  font-family: "Kanit", sans-serif;
 }
 
 .sezione6 {
@@ -33,6 +33,8 @@
   font-size: 1rem;
   color: #b8a2dd;
   padding-top: 20px;
+  transform: scale(1, 0.9);
+  line-height: 1.5;
 }
 .blocco1flex .textblocco1 .bottone-learn {
   padding-top: 10px;
@@ -111,12 +113,13 @@
   grid-template-areas: "quadro1, quadro2, quadro3" "quadro4, quadro5, quadro6";
 }
 .blocco2grid p {
-  font-size: 16px;
-  color: #b8a2dd;
-}
-.blocco2grid h5 {
   font-size: 24px;
   color: #f4eeff;
+  font-weight: 800;
+}
+.blocco2grid h5 {
+  font-size: 12px;
+  color: #b8a2dd;
 }
 
 .quadro2,
