--- a/css/style.scss
+++ b/css/style.scss
@@ -8,9 +8,240 @@
 
 @use 'buttons' as buttons;
 
+@use 'cards' as card;
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: font.$fontFamily;
+}
+
+.Section_3 {
+    background-color: rgb(8, 6, 11);
+    width:100vw;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    padding: function.convertpx(48px) 0;
+    .Image-Text_3 {
+        width: 100%;
+        max-width: 968px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: function.convertpx(64px);
+        flex: 1 1 0%;
+        .text_3 {
+            padding: function.convertpx(32px);
+            max-width: function.convertpx(530px);
+            h1 {
+                font-family: font.$fontFamily;
+                font-weight: font.$fontHeavyWeight;
+                font-size: function.convertpx(40px);
+                color:rgb(244, 238, 255);
+                span {
+                    color: color.$mainPurple;
+                }
+            }
+            p {
+                font-weight: font.$fontLightWeight;
+                padding: function.convertpx(16px) 0;
+                color: rgb(184, 173, 210);
+            }
+            a {
+                text-decoration: none;
+                color: color.$buttonBlue;
+                font-weight: font.$fontHeavyWeight;
+            }
+            button {
+                @include buttons.button;
+                a {
+                    text-decoration: none;
+                    color: white;
+                }
+            }
+        }
+        .image_3 {
+            box-sizing: content-box;
+            display:flex;
+            flex: 1 1 0%;
+            height:100%;
+            width:100%;
+            min-height: 512px;
+            position: relative;
+                #img1 {
+                    height: 100%;
+                    position: absolute;
+                    top: 0px;
+                    left: 0px;
+                    // animation: 3s ease-in-out 1s infinite normal none running bRTaPl;
+                    img {
+                        max-height: 100%;
+                        height: auto;
+                        max-width: 100%;
+                        width: auto;
+                    }
+                }
+                #img2 {
+                    height: 100%;
+                    position: absolute;
+                    top: 0px;
+                    left: 0px;
+                    // animation: 3s ease-in-out 0.66s infinite normal none running dwSZFG;
+                    img {
+                        max-height: 100%;
+                        height: auto;
+                        max-width: 100%;
+                        width: auto;
+                    }
+                }
+                #img3 {
+                    height: 100%;
+                    position: absolute;
+                    top: 0px;
+                    left: 0px;
+                    // animation: 3s ease-in-out 0.33s infinite normal none running uvIwZ;
+                    img {
+                        max-height: 100%;
+                        height: auto;
+                        max-width: 100%;
+                        width: auto;
+                    }
+                }
+            }
+        }
+    }
+.Section_5 {
+    width:100vw;
+    background: linear-gradient(rgb(11, 69, 118) 0%, rgb(9, 17, 21) 100%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // padding: function.convertpx(48px) 0;
+    .container_5 {
+        width: 80%;
+        background-color: rgba(8, 6, 11, 0.6);
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        // padding: function.convertpx(40px) function.convertpx(150px);
+        border-radius: 3rem;
+        border: 1px solid rgb(56, 50, 65);
+        backdrop-filter: blur(12px);
+        .text_5 {
+            // margin-bottom: 2rem;
+            text-align: center;
+            h2 {
+                font-family: font.$fontFamily;
+                font-weight: font.$fontHeavyWeight;
+                font-size: function.convertpx(32px);
+                color:white;
+                // margin-bottom: 1rem;
+                span {
+                    color: color.$mainPurple;
+                }
+            }
+            p {
+                font-weight: font.$fontLightWeight;
+                color: rgb(184, 173, 210);
+                // margin-bottom: 0.3rem;
+            }
+        }
+        .cards_5{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            gap: 2rem;
+            .card1_5 {
+                background: linear-gradient(rgb(255, 178, 55) 0%, rgb(255, 205, 81) 51.17%, rgb(255, 231, 106) 100%);
+                max-width: function.convertpx(290px);
+                border-radius: function.convertpx(24px);
+                // padding: 1.5rem;
+                transform: rotate(-2.36deg);
+                border: function.convertpx(1px) solid rgb(255, 178, 55);
+                border-bottom: function.convertpx(3px) solid rgb(255, 178, 55);
+                display: flex;
+                flex-direction:column;
+                .crystal-sphere {
+                    align-self: flex-end;
+                    flex-shrink: 0;
+                }
+                h2 {
+                    color: rgb(40, 13, 95)
+                }
+                p{
+                    color: rgb(40, 13, 95);
+                    // padding: 1rem 0;
+                }
+                button{
+                    @include buttons.button;
+                    width: 100%;
+                    margin-top: 1rem;
+                    a {
+                        text-decoration: none;
+                        color: rgb(9, 17, 21);
+                    }
+                    .arrow{
+                        fill: rgb(25, 19, 38);
+                        margin-left: function.convertpx(4px);
+                    }
+                }
+            }
+            .card2_5 {
+                background: linear-gradient(rgb(118, 69, 217) 0%, rgb(81, 33, 177) 100%);
+                max-width: function.convertpx(290px);
+                border-radius: function.convertpx(24px);
+                // padding: 1.5rem;
+                transform: rotate(1.43deg);
+                border: function.convertpx(1px) solid rgb(60, 23, 134);
+                border-bottom: function.convertpx(4px) solid rgb(60, 23, 134);
+                display: flex;
+                flex-direction:column;
+                .lottery-ticket {
+                    align-self: flex-end;
+                    fill: white;
+                    flex-shrink: 0;
+                }
+                h2 {
+                    background: -webkit-linear-gradient(rgb(255, 231, 106) 0%, rgb(255, 205, 81) 51.17%,  rgb(255, 178, 55)100%);
+                    background-clip: text;
+                    -webkit-background-clip: text; 
+                    -webkit-text-fill-color: transparent;
+                }
+                p {
+                    color: white;
+                    // padding: 1rem 0;
+                }
+                button {
+                    @include buttons.button;
+                    width: 100%;
+                    margin-top: 1rem;
+                    a {
+                        text-decoration: none;
+                        color: rgb(9, 17, 21);
+                    }
+                    .arrow{
+                        fill: rgb(25, 19, 38);
+                        margin-left: function.convertpx(4px);
+                    }
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width:968px){
+    .text_3 {
+        h1 {
+            font-size: function.convertpx(32px);
+        }
+    }
+}
+@media screen and (max-width:852px){
+    
 }
