--- a/css/style.scss
+++ b/css/style.scss
@@ -16,7 +16,11 @@
     box-sizing: border-box;
     font-family: font.$fontFamily;
 }
+body{
+    overflow-x:hidden;
+}
 
+/*------------------------------------------------------Sezione 3--------------------------------------------------------------*/
 .Section_3 {
     background-color: rgb(8, 6, 11);
     width:100vw;
@@ -73,7 +77,7 @@
             width:100%;
             min-height: 512px;
             position: relative;
-                #img1 {
+                #coin1 {
                     height: 100%;
                     position: absolute;
                     top: 0px;
@@ -86,7 +90,7 @@
                         width: auto;
                     }
                 }
-                #img2 {
+                #coin2 {
                     height: 100%;
                     position: absolute;
                     top: 0px;
@@ -99,7 +103,7 @@
                         width: auto;
                     }
                 }
-                #img3 {
+                #coin3 {
                     height: 100%;
                     position: absolute;
                     top: 0px;
@@ -115,33 +119,159 @@
             }
         }
     }
+/*---------------------------------------------------------------------------------FINE Sezione 3------------------------------------------------------------------------------*/
+
+/*-----------------------------------------------------------------------------------Sezione 5---------------------------------------------------------------------------------*/
 .Section_5 {
     width:100vw;
     background: linear-gradient(rgb(11, 69, 118) 0%, rgb(9, 17, 21) 100%);
     display: flex;
     justify-content: center;
     align-items: center;
-    // padding: function.convertpx(48px) 0;
+    padding: function.convertpx(100px) 0;
+    position: relative;
+    .magic-cards {
+        position: relative;
+        box-sizing: content-box;
+        height: function.convertpx(300px);
+        width: function.convertpx(500px);
+        align-self: flex-end;
+        position:absolute;
+        left:0;
+        bottom:function.convertpx(-64px);
+        #m-c-1{
+            position: absolute;
+            bottom:0;
+            left:0;
+            img {
+                max-height: 100%;
+                height: auto;
+                max-width: 100%;
+                width: auto;
+            }
+        }
+        #m-c-2{
+            position: absolute;
+            bottom:0;
+            left:0;
+            img {
+                max-height: 100%;
+                height: auto;
+                max-width: 100%;
+                width: auto;
+            }
+        }
+        #m-c-3{
+            position: absolute;
+            bottom:0;
+            left:0;
+            img {
+                max-height: 100%;
+                height: auto;
+                max-width: 100%;
+                width: auto;
+            }
+        }
+        #m-c-4{
+            position: absolute;
+            bottom:0;
+            left:0;
+            img {
+                max-height: 100%;
+                height: auto;
+                max-width: 100%;
+                width: auto;
+            }
+        }
+    }
+    .biliard-balls {
+        position: relative;
+        box-sizing: content-box;
+        height: function.convertpx(300px);
+        width:function.convertpx(500px);
+        align-self: flex-start;
+        position: absolute;
+        right:0;
+        top: function.convertpx(-64px);
+        #b-b-1{
+            position: absolute;
+            top:0;
+            left:0;
+            img {
+                max-height: 100%;
+                height: auto;
+                max-width: 100%;
+                width: auto;
+            }
+        }
+        #b-b-2{
+            position: absolute;
+            top:0;
+            left:0;
+            img {
+                max-height: 100%;
+                height: auto;
+                max-width: 100%;
+                width: auto;
+            }
+        }
+        #b-b-3{
+            position: absolute;
+            top:0;
+            left:0;
+            img {
+                max-height: 100%;
+                height: auto;
+                max-width: 100%;
+                width: auto;
+            }
+        }
+        #b-b-4{
+            position: absolute;
+            top:0;
+            left:0;
+            img {
+                max-height: 100%;
+                height: auto;
+                max-width: 100%;
+                width: auto;
+            }
+        }
+        #b-b-5{
+            position: absolute;
+            top:0;
+            left:0;
+            img {
+                max-height: 100%;
+                height: auto;
+                max-width: 100%;
+                width: auto;
+            }
+        }
+    }
     .container_5 {
-        width: 80%;
+        z-index:1;
+        width:100%;
+        max-width: function.convertpx(880px);
         background-color: rgba(8, 6, 11, 0.6);
         display:flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        // padding: function.convertpx(40px) function.convertpx(150px);
+        margin: 0 function.convertpx(35px);
+        padding: function.convertpx(40px) function.convertpx(100px);
         border-radius: 3rem;
         border: 1px solid rgb(56, 50, 65);
         backdrop-filter: blur(12px);
         .text_5 {
-            // margin-bottom: 2rem;
+            margin-bottom: 2rem;
             text-align: center;
             h2 {
                 font-family: font.$fontFamily;
                 font-weight: font.$fontHeavyWeight;
-                font-size: function.convertpx(32px);
+                font-size: function.convertpx(40px);
                 color:white;
-                // margin-bottom: 1rem;
+                margin-bottom: 1rem;
                 span {
                     color: color.$mainPurple;
                 }
@@ -149,10 +279,12 @@
             p {
                 font-weight: font.$fontLightWeight;
                 color: rgb(184, 173, 210);
-                // margin-bottom: 0.3rem;
+                margin-bottom: 0.3rem;
             }
         }
         .cards_5{
+            width:100%;
+            max-width:function.convertpx(600px);
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -162,7 +294,7 @@
                 background: linear-gradient(rgb(255, 178, 55) 0%, rgb(255, 205, 81) 51.17%, rgb(255, 231, 106) 100%);
                 max-width: function.convertpx(290px);
                 border-radius: function.convertpx(24px);
-                // padding: 1.5rem;
+                padding: 1.5rem;
                 transform: rotate(-2.36deg);
                 border: function.convertpx(1px) solid rgb(255, 178, 55);
                 border-bottom: function.convertpx(3px) solid rgb(255, 178, 55);
@@ -173,11 +305,12 @@
                     flex-shrink: 0;
                 }
                 h2 {
-                    color: rgb(40, 13, 95)
+                    color: rgb(40, 13, 95);
+                    font-size: function.convertpx(40px);
                 }
                 p{
                     color: rgb(40, 13, 95);
-                    // padding: 1rem 0;
+                    padding: 1rem 0;
                 }
                 button{
                     @include buttons.button;
@@ -197,10 +330,10 @@
                 background: linear-gradient(rgb(118, 69, 217) 0%, rgb(81, 33, 177) 100%);
                 max-width: function.convertpx(290px);
                 border-radius: function.convertpx(24px);
-                // padding: 1.5rem;
+                padding: 1.5rem;
                 transform: rotate(1.43deg);
                 border: function.convertpx(1px) solid rgb(60, 23, 134);
-                border-bottom: function.convertpx(4px) solid rgb(60, 23, 134);
+                border-bottom: function.convertpx(3px) solid rgb(60, 23, 134);
                 display: flex;
                 flex-direction:column;
                 .lottery-ticket {
@@ -213,10 +346,11 @@
                     background-clip: text;
                     -webkit-background-clip: text; 
                     -webkit-text-fill-color: transparent;
+                    font-size: function.convertpx(40px);
                 }
                 p {
                     color: white;
-                    // padding: 1rem 0;
+                    padding: 1rem 0;
                 }
                 button {
                     @include buttons.button;
@@ -235,13 +369,69 @@
         }
     }
 }
+//Responsive
 @media screen and (max-width:968px){
-    .text_3 {
-        h1 {
+    #h1_section_3, #h2_section_5 {
             font-size: function.convertpx(32px);
         }
+    .Section_5 {
+        .container_5 {
+            .cards_5 {
+                .card1_5 {
+                    #jackpot-prediction{
+                        font-size: function.convertpx(32px);
+                    }
+                }
+                .card2_5 {
+                    #jackpot-lottery{
+                        font-size: function.convertpx(32px);
+                    }
+                }
+            }
+        } 
     }
 }
 @media screen and (max-width:852px){
-    
+    .Section_3 {
+        .Image-Text_3 {
+            flex-direction: column;
+            .text_3 {
+                order:2;
+                max-width:100%;
+                padding-top:0;
+            }
+            .image_3 {
+                order:1;
+                max-width: function.convertpx(192px);
+                min-height: function.convertpx(192px);
+                align-self:flex-end;
+            }
+        }
+    }
+    .Section_5 {
+        .magic-cards {
+            height: function.convertpx(100px);
+            width: function.convertpx(200px);
+            bottom: function.convertpx(-35px);
+        }
+        .biliard-balls {
+            height: function.convertpx(100px);
+            width: function.convertpx(200px);
+            top: function.convertpx(-50px);
+        }
+        .container_5 {
+            padding: function.convertpx(20px) function.convertpx(50px);
+            .cards_5 {
+                flex-direction:column;
+                .card1_5 {
+                    transform: rotate(0);
+                }
+                .card2_5 {
+                    transform: rotate(0);
+                }
+            }
+        }
+    }
 }
+
+/*---------------------------------------------------------------------------------FINE Sezione 3------------------------------------------------------------------------------*/
