--- a/_buttons.scss
+++ b/_buttons.scss
@@ -1,6 +1,6 @@
-@use 'colorsModule' as color; //importo il modulo dei colori rinominandolo "color" per quando bisognerà richiamarlo
-@use 'fontModule' as font;
-@use 'functionModule' as function; //importo il modulo dei fonts
+@use './colorsModule' as color; //importo il modulo dei colori rinominandolo "color" per quando bisognerà richiamarlo
+@use './fontModule' as font;
+@use './functionModule' as function; //importo il modulo dei fonts
 
 @mixin button {
 
