--- a/_designSystem.scss
+++ b/_designSystem.scss
@@ -1,8 +1,8 @@
-@use 'colorsModule' as color; //importo il modulo dei colori rinominandolo "color" per quando bisognerà richiamarlo
+@use './colorsModule' as color; //importo il modulo dei colori rinominandolo "color" per quando bisognerà richiamarlo
 
-@use 'fontModule' as font; //importo il modulo dei fonts
+@use './fontModule' as font; //importo il modulo dei fonts
 
-@use 'functionModule' as function;
+@use './functionModule' as function;
 
 
 @mixin DivColorShow($color) {
