--- a/_Sezione2.scss
+++ b/_Sezione2.scss
@@ -154,7 +154,9 @@
             flex-direction: row-reverse;
             
             .lower1, .lower2 {
-                @extend .header1;
+                font-size: 32px;
+                font-weight: font.$fontHeavyWeight; /*fontheavyWeight*/
+                line-height: 1.1;;
             }
             .lower3 {
                 font-weight: font.$fontLightWeight; /*fontLightWeight*/
